<resources>
    <string name="app_name">Leaps</string>
    <string name="facebook_app_id">248113639001510</string>
    <string name="fb_login_protocol_scheme">fb2270868226472150</string>
    <string name="walkthrough_content_one">We\'ve all heard how crucial it is to set intentions, goals and targets. Powerful goals electrify us…</string>
    <string name="walkthrough_header_one">PASSION</string>
    <string name="walkthrough_content_two">Have you been prospecting for months on end, only to end up with no one? Or have you been trying to see a product or service that has not been selling…</string>
    <string name="walkthrough_header_two">DRIVE</string>
    <string name="walkthrough_content_three">We have a chance to learn and grow every day, no matter what we did not do yesterday or neglected to do last week.</string>
    <string name="walkthrough_header_three">POWER</string>
    <string name="next">NEXT</string>
    <string name="skip">skip</string>
    <string name="lbl_welcome">WELCOME TO LEAPS</string>
    <string name="btn_create_account">Create account</string>
    <string name="btn_sign_in_with_google">Sign in with Google</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_sign_in_facebook">Sign in with Facebook</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_login_username">Username or Email address</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_reset">Reset all</string>
    <string name="email">Email</string>
    <string name="lbl_reset_pass_exp">Enter your email and we will help you reset your password.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_uppercase">CANCEL</string>
    <string name="your_name">Your name?</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="your_email_address">Your email address?</string>
    <string name="your_password">Your password?</string>
    <string name="lbl_reg_pass_explanation">Your password should be 6 or more characters long and must include at least one special symbol.</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="lbl_reg_birthday_expl">You must be at least 13 years old to access or use Leaps.</string>
    <string name="finish">finish</string>
    <string name="your_birthday">Your birthday?</string>
    <string name="homescreen_tab_home">HOME</string>
    <string name="homescreen_tab_following">FOLLOWING</string>
    <string name="homescreen_tab_cal">CALENDAR</string>
    <string name="homescreen_tab_pay">PAY</string>
    <string name="homescreen_tab_chat">INBOX</string>
    <string name="homescreen_tab_profile">PROFILE</string>
    <string name="homescreen_search_bar_lbl">Sofia • Any Activity • Any Time</string>
    <string name="lbl_recycler_header_see_all">see all</string>
    <string name="from">from $</string>
    <string name="lbl_free">free</string>
    <string name="lbl_feed_trainers_header">most popular trainers in sofia</string>
    <string name="lbl_open_events">Open Events</string>
    <string name="lbl_finished">Finished</string>
    <string name="lbl_popular_events">Popular events</string>
    <string name="lbl_events_nearby">Events nearby</string>
    <string name="lbl_selected_events">Selected events for you</string>
    <string name="lbl_maximum_distance">Maximum distance</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_time_and_date">Time and date</string>
    <string name="lbl_about">About</string>
    <string name="lbl_location">Location</string>
    <string name="attendance">Attendance</string>
    <string name="lbl_free_slots">Free slots</string>
    <string name="lbl_people_attending">People attending</string>
    <string name="lbl_events">Events</string>
    <string name="lbl_specialities">Specialities</string>
    <string name="lbl_show_past">Show past</string>
    <string name="lbl_events_filtered">Events filtered</string>
    <string name="lbl_loading_more">Loading more</string>
    <string name="lbl_clear_filter">Clear filter</string>
    <string name="lbl_popular_events_near_you">popular events near you</string>
    <string name="lbl_up_to">Up to</string>
    <string name="lbl_km">km</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_next3">Next 3 days</string>
    <string name="lbl_next5">Next 5 days</string>
    <string name="lbl_all">All</string>
    <string name="lbl_past_events">Past events</string>
    <string name="lbl_tutorial_header_1">Sports rookie or pro athlete?</string>
    <string name="lbl_tutorial_content_1">Doesn\'t matter. Leaps will help you find the best training event for you personally.</string>
    <string name="lbl_tutorial_header_2">Pay less, get more.</string>
    <string name="lbl_tutorial_content_2">Leaps revolutionizes the way you pay for training sessions, allowing you to pay less for a better training experience.</string>
    <string name="lbl_tutorial_header_3">Train with the best</string>
    <string name="lbl_tutorial_content_3">Leaps is the only app that shows you a full list of trainers in your city, ranked and rated strictly by users. Warning - chances of disappointment drop dramatically.</string>
    <string name="lbl_tutorial_header_4">You\'re part of the team now</string>
    <string name="lbl_tutorial_content_4">Socialize and team up with other sports enthusiasts. Join teams and you\'ll never train alone again.</string>
    <string name="lbl_tutorial_header_5">The more you train,\n the more you gain</string>
    <string name="lbl_tutorial_content_5">Unlock prizes, free training sessions and bonuses for staying in shape. It\'s called a work out. So finally, you\'ll get rewarded for it.</string>
    <string name="lbl_got_it">Got it</string>
    <string name="lbl_general_error">Something went wrong</string>
    <string name="lbl_reject_spot">Reject spot!</string>
    <string name="lbl_get_spot">Get a spot!</string>
    <string name="lbl_reject">UNATTEND</string>
    <string name="lbl_attend">ATTEND</string>
    <string name="lbl_try_free">Try it for free!</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="auth_label">Authorization</string>
    <string name="success_lbl">You\'re in!</string>
    <string name="location">Location:</string>
    <string name="age">Age:</string>
    <string name="create_event">create an event</string>
    <string name="create_event_pic_lbl">Event main picture and cover photos</string>
    <string name="title">Title</string>
    <string name="event_title">Event Title</string>
    <string name="description">Description</string>
    <string name="type_description">Type description</string>
    <string name="workout_type">Workout type</string>
    <string name="lbl_storage_permission_title">Leaps needs to access storage</string>
    <string name="lbl_storage_permission_message">The app requires permission to read your images from external storage</string>
    <string name="ok">Ok</string>
    <string name="lbl_location_permission_title">Leaps needs your location</string>
    <string name="lbl_location_permission_message">We can display more relevant data if we know your location</string>
    <string name="error_empty_tag">Please input a non empty tag name</string>
    <string name="lbl_tag_prompt_name">Enter tag name</string>
    <string name="error_event_title">Please provide a non empty title for your event</string>
    <string name="error_event_description">Please provide a non empty description for your event</string>
    <string name="error_event_picture">Please provide a picture for your event</string>
    <string name="event_location">Event location</string>
    <string name="price_and_slots">Price and slots</string>
    <string name="price_from">Price from</string>
    <string name="free_slots">Free slots</string>
    <string name="lbl_create_event_free_slots_explanation">Please select how many people can attend your event.</string>
    <string name="error_create_event_price_from">Please provide a minimum price</string>
    <string name="error_create_event_free_slots">Please provide the number of free slots</string>
    <string name="publish_your_event">Publish your event</string>
    <string name="time_and_date">Time and date</string>
    <string name="time">Time</string>
    <string name="error_create_event_time">Please provide a starting time for your event</string>
    <string name="errro_create_event_date">Please provide a date for your event</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_invite_friends">Invite friends</string>
    <string name="give_us_feedback">Give Us Feedbacka</string>
    <string name="view_help_tutorial_again">View help tutorial again</string>
    <string name="log_out">Log Out</string>
    <string name="become_trainer_lbl">Switch to professional profile and gain access to trainer features</string>
    <string name="become_a_trainer">Become a trainer</string>
    <string name="settings_explanation">Please select the desired distance radius of the activities you are seeking</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="done_uppercase">DONE</string>
    <string name="years_of_being_a_trainer">Years of being a trainer?</string>
    <string name="years">Years</string>
    <string name="_0">$ 0</string>
    <string name="your_price_of_one_training_session">Your price of one training session?</string>
    <string name="phone_number_explanation">Your phone number will not be shared without you permission. This is only if LEAPS team needs to contact you.</string>
    <string name="session_price_error">Please provide a session price</string>
    <string name="years_error">Please provide the number of years</string>
    <string name="phone_number_error">Please provide a phone number</string>
    <string name="profile_picture_and_background_photos">Profile picture and background photos</string>
    <string name="edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="about_me">About me</string>
    <string name="years_training">Years training</string>
    <string name="individual_session_price_per_hour">Individual session price per hour</string>
    <string name="error_not_adult">You must be 13 or older to register or use this app</string>
    <string name="lbl_profile_edit_success">Profile edited successfully</string>
    <string name="error_empty_fields">Please fill in the empty fields</string>
    <string name="your_phone_number">Your phone number?</string>
    <string name="phone_number">Phone number</string>
    <string name="attended">Attended</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="error_price_years">Please enter whole numbers for years and price fields</string>
    <string name="error_whole_number">Please enter a whole number</string>
    <string name="lbl_location_obtainint">Obtaining location</string>
    <string name="no_items_to_show">No items to show</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="followed">FOLLOWED</string>
    <string name="follow">FOLLOW</string>
    <string name="empty_followers">No followers</string>
    <string name="enter_comment">Please enter a comment</string>
    <string name="give_rating">Please give your rating</string>
    <string name="required_permissions">Required permissions are not granted</string>
</resources>