<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <Button
        android:id="@+id/reg_birthday_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/primaryBlue"/>

    <club.leaps.presentation.utils.CustomTextView
        android:id="@+id/reg_birthday_header"
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/primaryBlue"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:text="@string/your_birthday"/>

    <TextView
        android:id="@+id/reg_birthday_explanation"
        android:layout_width="wrap_content"
        android:layout_below="@+id/reg_birthday_header"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primaryBlue"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_birthday_header"
        android:layout_alignStart="@+id/reg_birthday_header"
        android:layout_alignRight="@+id/reg_birthday_header"
        android:layout_alignEnd="@+id/reg_birthday_header"
        android:textAlignment="center"
        android:text="@string/lbl_reg_birthday_expl"
        android:layout_marginBottom="20dp"
        />


    <club.leaps.presentation.utils.CustomTextView
        android:id="@+id/reg_birthday_calendarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_blue_edit_text"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/date"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textColor="@color/primaryBlue"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_below="@+id/reg_birthday_explanation"
        />

    <Button
        android:id="@+id/reg_birthday_action_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:padding="20dp"
        android:adjustViewBounds="true"
        android:drawableRight="@drawable/ic_action_next"
        android:drawableEnd="@drawable/ic_action_next"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/finish"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/primaryBlue"/>
</RelativeLayout>