<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <Button
        android:id="@+id/reg_pass_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/primaryBlue"/>

    <com.example.xcomputers.leaps.utils.CustomTextView
        android:id="@+id/reg_pass_header"
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/primaryBlue"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:text="@string/your_password"/>

    <TextView
        android:id="@+id/reg_pass_explanation"
        android:layout_width="wrap_content"
        android:layout_below="@+id/reg_pass_header"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primaryBlue"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg_pass_header"
        android:layout_alignStart="@+id/reg_pass_header"
        android:layout_alignRight="@+id/reg_pass_header"
        android:layout_alignEnd="@+id/reg_pass_header"
        android:textAlignment="center"
        android:text="@string/lbl_reg_pass_explanation"
        android:layout_marginBottom="20dp"
        />


    <com.example.xcomputers.leaps.utils.CustomEditText
        android:id="@+id/reg_pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:layout_below="@+id/reg_pass_explanation"
        />

    <Button
        android:id="@+id/reg_pass_action_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:padding="20dp"
        android:adjustViewBounds="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/ic_action_next"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/primaryBlue"/>
</RelativeLayout>