<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <Button
        android:id="@+id/reg_names_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/primaryBlue"/>

    <club.leaps.presentation.utils.CustomTextView
        android:id="@+id/reg_names_header"
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/primaryBlue"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:text="@string/your_name"/>


    <club.leaps.presentation.utils.CustomEditText
        android:id="@+id/reg_names_first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:maxLines="1"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext"
        android:hint="@string/first_name"
        android:layout_below="@+id/reg_names_header"
        android:layout_marginBottom="20dp"
        />

    <club.leaps.presentation.utils.CustomEditText
        android:id="@+id/reg_names_last_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:hint="@string/last_name"
        android:layout_below="@+id/reg_names_first_name_et"
        android:inputType="textCapSentences"
        />


    <Button
        android:id="@+id/reg_names_action_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:padding="20dp"
        android:adjustViewBounds="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/ic_action_next"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/primaryBlue"/>
</RelativeLayout>